--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="stylesheets/global.css">
     <link rel="stylesheet" href="stylesheets/main.css">
-    <title>Travel Site</title>
+    <title>Travel Site</title> <!-- NEW STUFF -->
 </head>
 <body>
     <header>
